# Portfolio

./: .gitignore
apisrv/: WeatherForecast.cs
apisrv/Controllers/: WeatherForecastController.cs
apisrv/Properties/: launchSettings.json
auth_server/: Cargo.toml
auth_server/src/: main.rs
authsrv/: AuthSrv.sln
authsrv/AuthSrv/: AuthSrv.csproj  Program.cs  appsettings.Development.json
authsrv/AuthSrv/Controllers/: AuthController.cs
authsrv/AuthSrv/Data/: AuthDbContext.cs
authsrv/AuthSrv/Migrations/: 20230212153105_Initial.Designer.cs  20230212153105_Initial.cs  20230215205036_Update User Table Name.Designer.cs  20230215205036_Update User Table Name.cs  AuthDbContextModelSnapshot.cs
authsrv/AuthSrv/Models/: ZOrgUser.cs
authsrv/AuthSrv/Models/DTO/: LoginRequestDTO.cs  NewUserRequestDTO.cs  PasswordResetDTO.cs  UserInformationDTO.cs
authsrv/AuthSrv/Properties/: launchSettings.json
